# dawta-website

./: .gitignore  Dockerfile.railway  Makefile  README.md  docker-compose.yml  railway.toml
.cursor/plans/: railway_+_netlify_deploy_087ce57d.plan.md  survey-vote_judgment_page_d63e6939.plan.md
backend/: Dockerfile  debug_supabase.ipynb  main.py  pyproject.toml
backend/src/: main.py  models.py  services.py  settings.py  supabase_client.py
backend/src/routers/: citations.py  judgments.py  projects.py
backend/src/services/: judgment_service.py  project_services.py
data/: citations.json  projects.json
data/eu-pair-correlation/: README.md
data/ligue-1-boostee-au-jet/: partial_report.md  summary.md
frontend/: Dockerfile  THEME.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  index.ts
frontend/src/components/atoms/: Button.tsx  DataRay.tsx  DiffractionLogo.tsx  GlareText.tsx  Heading.tsx  Logo.tsx  NavLink.tsx  Spinner.tsx  StatusBadge.tsx  Text.tsx  index.ts
frontend/src/components/molecules/: ErrorMessage.tsx  Footer.tsx  LoadingState.tsx  MarkdownContent.tsx  NavBar.tsx  PDFViewer.tsx  PageHeader.tsx  ProjectCard.tsx  SwipeCard.tsx  index.ts
frontend/src/components/organisms/: CitationsList.tsx  Gallery.tsx  LineChart.tsx  ProjectsList.tsx  index.ts
frontend/src/hooks/: useGitHubStars.ts
frontend/src/pages/: About.tsx  Home.tsx  JudgeSurveyVote.tsx  ProjectDetail.tsx  Projects.tsx  Report.tsx
(+1 files in other folders)
